--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -924,6 +924,11 @@ Added QSPI Buswidth parameter in canonical defines.
 rtcpsu_v1_5:
 Fixed compilation warnings, source code cleanup. CR-983311
 
+axiethernet_v5_6:
+CR#979636 lwip stop's working as soon as something is plugged to it's
+AXI stream bus.
+CR#979023 Intr fifo example failed to compile.
+
 standalone_v6_4:
 Updated arm/common/xil_exception.c to fix warnings in C level exception handlers
 of ARM 32 bit processors.
