drivers: Add new driver for XXV Ethernet MAC
XXV Ethernet is a soft IP MAC that supports upto 10G speed.
This patch adds a new driver for the IP along with an example
that demonstrates use of this IP with MCDMA.

Signed-off-by: Harini Katakam <harinik@xilinx.com>

Acked-by: Kedareswara rao Appana <appanad@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -377,6 +377,9 @@ xxvethernet_v1_0:
 Add new driver for XXV Ethernet IP
 Add support for USXGMII IP
 
+xxvethernet_v1_0:
+Add new driver for XXV Ethernet IP
+
 zynqmp_fsbl:
 Added support for NIST-SHA3 padding
 Added Boot header authentication
