--- a/lib/bsp/standalone/src/changelog.txt
+++ b/lib/bsp/standalone/src/changelog.txt
@@ -510,5 +510,6 @@
  * 6.6 mus   02/02/18 Updated get_connected_if proc in standalone tcl to detect the HPC port 
  *                    configured with smart interconnect.It fixes CR#990318.
  * 6.6 srm   02/10/18 Updated csu_wdt interrupt to the correct value. Fixes CR#992229
+ * 6.6 asa   02/12/18 Fix for heap handling for ARM platforms. CR#993932.
  *
  *****************************************************************************************/
