XilSKey: Updated Zynqmp eFUSE example
As library is reloading cache after programming
eFUSE bits the call to cache re-load is been
removed from example.
Updated ChangeLog of the library.

Signed-off-by: VNSL Durga <vnsldurg@xilinx.com>

Acked-for-series: Krishna Chaitanya Patakamuri <kpataka@xilinx.com>

--- a/lib/sw_services/xilskey/src/changelog.txt
+++ b/lib/sw_services/xilskey/src/changelog.txt
@@ -118,5 +118,9 @@
 *                      enable bits and some of the reserved bits.
 * 6.3    vns  07/12/17 Added support for programming eFUSE and BBRAM of kintex
 *                      Ultrascale plus.
+* 6.4    vns  02/19/18 Added XilSKey_ZynqMp_EfusePs_CacheLoad() call in
+*                      XilSKey_ZynqMp_EfusePs_Write(), on successul programming
+*                      of all requested efuse bits updated efuse can directly
+*                      read from eufse cache.
 *
  ********************************************************************************/
