XilSkey: Support for Obfuscation enabling
Providing support for programming eFUSE AES obfuscation feature
enable, once this secure bit is enabled AES key in eFUSE will be
decrypted to get actual key for decrypting the bitstream in
Ultrascale/Ultrascale+ microblaze.

Signed-off-by: VNSL Durga <vnsldurg@xilinx.com>
Acked-for-series: Ramakrishna Ganeshu Poolla <rpoolla@xilinx.com>

--- a/lib/sw_services/xilskey/src/changelog.txt
+++ b/lib/sw_services/xilskey/src/changelog.txt
@@ -122,5 +122,8 @@
 *                      XilSKey_ZynqMp_EfusePs_Write(), on successul programming
 *                      of all requested efuse bits updated efuse can directly
 *                      read from eufse cache.
+*        vns  02/27/18 Added support for virtex ultrascale and untrascale plus
+*                      Provided efuse secure bit(obfuscation enable feature)
+*                      programming support for ultrascale and untrascale plus.
 *
  ********************************************************************************/
