XilSKey: Fixed hanging issue in BBRAM zynqMP
Due to hardware errata,occurs a hang  when BBRAM is in
programming mode and we request for zeroise or program
the BBRAM.
This patch fixes this by clearing DATA registers before
zeroisation and zeroises the BBRAM before doing
program enable. So we don't encounter a hang.

Signed-off-by: VNSL Durga <vnsldurg@xilinx.com>
Acked-by: Krishna Chaitanya Patakamuri <kpataka@xilinx.com>

Acked-by: Krishna Chaitanya Patakamuri <kpataka@xilinx.com>

--- a/lib/sw_services/xilskey/src/changelog.txt
+++ b/lib/sw_services/xilskey/src/changelog.txt
@@ -126,5 +126,7 @@
 *                      Provided efuse secure bit(obfuscation enable feature)
 *                      programming support for ultrascale and untrascale plus.
 *        vns  03/09/18 Added correct status bits for ultrascale plus
+* 6.5    vns  03/16/18 Fixed hanging issue when program/zeroise is requested
+*                      while programming mode in enabled state.
 *
  ********************************************************************************/
